changes for gh-pages demo

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <h1>Tic-Tac-Toe</h1>
             <nav>
 				<a href="/">Home</a> |
-				<a href="/tictactoe.html">Tic-Tac-Toe</a> |
+                <a href="/JQuery-tic-tac-toe/">Tic-Tac-Toe</a> |
 				<a href="/registration.html">Registration Form</a> |
 				<a href="/contact.html">Contact Us</a> |
 				<a href="/faq.html">FAQ</a>	
