gh-pages nav changes

--- a/faq.html
+++ b/faq.html
@@ -19,11 +19,11 @@ $(document).ready(function(){
 <body>
 <h1 style="text-align:center">FAQ</h1>
 <nav>
-	<a href="/">Home</a> |
-	<a href="/tictactoe.html">Tic-Tac-Toe</a> |
-	<a href="/registration.html">Registration Form</a> |
-	<a href="/contact.html">Contact Us</a> |
-	<a href="/faq.html">FAQ</a>	
+    <a href="/">Home</a> |
+    <a href="/JQuery-tic-tac-toe/">Tic-Tac-Toe</a> |
+    <a href="/JQuery-tic-tac-toe/registration.html">Registration Form</a> |
+    <a href="/JQuery-tic-tac-toe/contact.html">Contact Us</a> |
+    <a href="/JQuery-tic-tac-toe/faq.html">FAQ</a>	
 </nav>
 
 <table id="faq">
