--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
             <nav>
 				<a href="/">Home</a> |
                 <a href="/JQuery-tic-tac-toe/">Tic-Tac-Toe</a> |
-				<a href="/registration.html">Registration Form</a> |
-				<a href="/contact.html">Contact Us</a> |
-				<a href="/faq.html">FAQ</a>	
+                <a href="/JQuery-tic-tac-toe/registration.html">Registration Form</a> |
+                <a href="/JQuery-tic-tac-toe/contact.html">Contact Us</a> |
+                <a href="/JQuery-tic-tac-toe/faq.html">FAQ</a>	
 			</nav>
 
             <h2><span id="player_mark"></span>'s turn!</h2>
