--- a/registration.html
+++ b/registration.html
@@ -17,11 +17,11 @@ $( "#regForm" ).validate();
 <body>
 <h1>Registration Form</h1>
 <nav>
-	<a href="/">Home</a> |
-	<a href="/tictactoe.html">Tic-Tac-Toe</a> |
-	<a href="/registration.html">Registration Form</a> |
-	<a href="/contact.html">Contact Us</a> |
-	<a href="/faq.html">FAQ</a>	
+    <a href="/">Home</a> |
+    <a href="/JQuery-tic-tac-toe/">Tic-Tac-Toe</a> |
+    <a href="/JQuery-tic-tac-toe/registration.html">Registration Form</a> |
+    <a href="/JQuery-tic-tac-toe/contact.html">Contact Us</a> |
+    <a href="/JQuery-tic-tac-toe/faq.html">FAQ</a>	
 </nav>
 
 <form id="regForm" method="get" action="">
